bin: Make sure to cache context types that we did not store yet

https://bugzilla.gnome.org/show_bug.cgi?id=708668